# sigil-example-contracts

./: Cargo.toml
01-hello-world/contract/: Cargo.toml
01-hello-world/test/: Cargo.toml
02-token/contract/: Cargo.toml
02-token/contract/src/: lib.rs
02-token/test/: Cargo.toml
02-token/test/src/: lib.rs
03-shared-account/contract/src/: lib.rs
03-shared-account/test/: Cargo.toml
03-shared-account/test/src/: lib.rs
04-shared-account-dynamic/contract/: Cargo.toml
04-shared-account-dynamic/contract/src/: lib.rs
04-shared-account-dynamic/test/: Cargo.toml
04-shared-account-dynamic/test/src/: lib.rs
05-proxy/contract/: Cargo.toml
05-proxy/contract/src/: lib.rs
05-proxy/test/: Cargo.toml  build.rs
06-shared-account-proxied/contract/: Cargo.toml
06-shared-account-proxied/test/: Cargo.toml
amm/: Cargo.toml
amm/contract/: Cargo.toml
amm/contract/src/: lib.rs
amm/test/: Cargo.toml
amm/test/src/: lib.rs
contract/: Cargo.toml
contract/src/: lib.rs
hello-world/: Cargo.toml
hello-world/contract/: Cargo.toml
hello-world/test/: Cargo.toml
pool/contract/: Cargo.toml
pool/test/: Cargo.toml
proxy/contract/: Cargo.toml
proxy/test/: Cargo.toml
proxy/test/src/: lib.rs
shared-account-dynamic/contract/: Cargo.toml
shared-account-dynamic/contract/src/: lib.rs
shared-account-dynamic/contract/wit/: contract.wit
shared-account-dynamic/test/: Cargo.toml
shared-account/contract/: Cargo.toml
shared-account/test/: Cargo.toml
test/: Cargo.toml  build.rs
test/src/: lib.rs
token/contract/: Cargo.toml
token/test/: Cargo.toml
(+16 files in other folders)
