[workspace]
members = ["contract", "test"]
resolver = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace.dependencies]
testlib = { path = "../../Kontor/core/testlib" }
stdlib = { path = "../../Kontor/core/stdlib" }

wit-bindgen = { version = "=0.46.0" }
tokio = { version = "1", features = ["full"] }