[package]
name = "proxy-test"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
testlib = { workspace = true }
stdlib = { workspace = true }
tokio = { workspace = true }

token-test = { path = "../../token/test" }
shared-account-dynamic-test = { path = "../../shared-account-dynamic/test" }
